--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <title>Студия</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -24,20 +24,24 @@
         >
         <nav>
           <ul class="list anchor">
-            <li><a href="./index.html" class="nav-link">Студия</a></li>
-            <li>
-              <a href="./portfolio.html" class="nav-link active">Портфолио</a>
+            <li class="anchor-item">
+              <a href="./index.html" class="nav-link active">Студия</a>
             </li>
-            <li><a href="" class="nav-link">Контакты</a></li>
+            <li class="anchor-item">
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            </li>
+            <li class="anchor-item">
+              <a href="" class="nav-link">Контакты</a>
+            </li>
           </ul>
         </nav>
         <ul class="list mailtel">
-          <li>
+          <li class="mailtel-item">
             <a href="mailto:info@devstudio.com" class="contact-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="mailtel-item">
             <a href="tel:+380961111111" class="contact-link"
               >+38 096 111 11 11</a
             >
@@ -46,113 +50,117 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <!--<h1>Портфолио</h1>-->
-        <section class="section">
-          <!--<h2>Фильтр</h2>-->
-          <ul class="list filter">
-            <li class="li-button">
-              <button type="button" class="btn-filter">Все</button>
+      <section class="section hero">
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+
+          <button type="button" class="hero-button">Заказать услугу</button>
+        </div>
+      </section>
+      <section class="section-feature section">
+        <!--<h2>Особенности</h2>-->
+        <ul class="container feat-cont list">
+          <li class="group-feature">
+            <h3 class="feature-title">Внимание к деталям</h3>
+            <p class="feature-text">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li class="group-feature">
+            <h3 class="feature-title">Пунктуальность</h3>
+            <p class="feature-text">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li class="group-feature">
+            <h3 class="feature-title">Планирование</h3>
+            <p class="feature-text">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает
+            </p>
+          </li>
+          <li class="group-feature">
+            <h3 class="feature-title">Современные технологи</h3>
+            <p class="feature-text">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Чем мы занимаемся</h2>
+          <ul class="list our-work">
+            <li class="example">
+              <img
+                src="./images/about/we-can-do1.jpg"
+                alt="Создание десктопных приложений"
+                width="370"
+              />
             </li>
-            <li class="li-button">
-              <button type="button" class="btn-filter">Веб-сайты</button>
+            <li class="example">
+              <img
+                src="./images/about/we-can-do2.jpg"
+                alt="Создание мобильных приложений"
+                width="370"
+              />
             </li>
-            <li class="li-button">
-              <button type="button" class="btn-filter">Приложения</button>
-            </li>
-            <li class="li-button">
-              <button type="button" class="btn-filter">Дизайн</button>
-            </li>
-            <li class="li-button">
-              <button type="button" class="btn-filter">Маркетинг</button>
+            <li class="example">
+              <img
+                src="./images/about/we-can-do3.jpg"
+                alt="Создание приложений для планшетов"
+                width="370"
+              />
             </li>
           </ul>
-          <!--<h2>Примеры работ</h2>-->
-          <ul class="list portfolio-card">
-            <li>
+        </div>
+      </section>
+      <section class="section-member section">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="list members">
+            <li class="cards">
               <img
-                src="./images/portfolio/example1.jpg"
-                alt="Дизайн сайта"
-                width="370"
+                src="./images/team/memb1.jpg"
+                alt="фото мужчины из команды разработчиков"
+                width="270"
               />
-              <h3 class="portfolio-title">Технокряк</h3>
-              <p class="project-type">Веб-сайт</p>
+              <h3 class="member-name">Игорь Демьяненко</h3>
+              <p class="member-role">Product Designer</p>
             </li>
-            <li>
+            <li class="cards">
               <img
-                src="./images/portfolio/example2.jpg"
-                alt=" Дизайн Постера"
-                width="370"
+                src="./images/team/memb2.jpg"
+                alt="фото женщины из команды разработчиков"
+                width="270"
               />
-              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-              <p class="project-type">Дизайн</p>
+              <h3 class="member-name">Ольга Репина</h3>
+              <p class="member-role">Frontend Developer</p>
             </li>
-            <li>
+            <li class="cards">
               <img
-                src="./images/portfolio/example3.jpg"
-                alt=" Дизайн приложения ресторан Seafood"
-                width="370"
+                src="./images/team/memb3.jpg"
+                alt="фото мужчины из команды разработчиков"
+                width="270"
               />
-              <h3 class="portfolio-title">Ресторан Seafood</h3>
-              <p class="project-type">Приложение</p>
+              <h3 class="member-name">Николай Тарасов</h3>
+              <p class="member-role">Marketing</p>
             </li>
-            <li>
+            <li class="cards">
               <img
-                src="./images/portfolio/example4.jpg"
-                alt="Фото наушников"
-                width="370"
+                src="./images/team/memb4.jpg"
+                alt="фото мужчины из команды разработчиков"
+                width="270"
               />
-              <h3 class="portfolio-title">Проект Prime</h3>
-              <p class="project-type">Маркетинг</p>
-            </li>
-            <li>
-              <img
-                src="./images/portfolio/example5.jpg"
-                alt="Дизайн проекта Boxes-коробочки"
-                width="370"
-              />
-              <h3 class="portfolio-title">Проект Boxes</h3>
-              <p class="project-type">Приложение</p>
-            </li>
-            <li>
-              <img
-                src="./images/portfolio/example6.jpg"
-                alt="Дизайн сайта Inspiration has no Borders"
-                width="370"
-              />
-              <h3 class="portfolio-title">Inspiration has no Borders</h3>
-              <p class="project-type">Веб-сайт</p>
-            </li>
-            <li>
-              <img
-                src="./images/portfolio/example7.jpg"
-                alt="Дизайн издания Limited Edition"
-                width="370"
-              />
-              <h3 class="portfolio-title">Издание Limited Edition</h3>
-              <p class="project-type">Дизайн</p>
-            </li>
-            <li>
-              <img
-                src="./images/portfolio/example8.jpg"
-                alt="Дизайн проекта LAB"
-                width="370"
-              />
-              <h3 class="portfolio-title">Проект LAB</h3>
-              <p class="project-type">Маркетинг</p>
-            </li>
-            <li>
-              <img
-                src="./images/portfolio/example9.jpg"
-                alt="Дизайн приложения Growing Business"
-                width="370"
-              />
-              <h3 class="portfolio-title">Growing Business</h3>
-              <p class="project-type">Приложение</p>
+              <h3 class="member-name">Михаил Ермаков</h3>
+              <p class="member-role">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container footer-container">
