--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
         </nav>
         <ul class="list mailtel">
           <li class="mailtel-item">
-            <a href="mailto:info@devstudio.com" class="contact-link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="contact-link">
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="mailtel-item">
-            <a href="tel:+380961111111" class="contact-link"
-              >+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="contact-link">
+              <svg class="tel-icon" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -51,9 +57,8 @@
     </header>
     <main>
       <section class="section hero">
-        <div class="container">
+        <div class="container background-hero">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-
           <button type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
@@ -61,6 +66,11 @@
         <!--<h2>Особенности</h2>-->
         <ul class="container feat-cont list">
           <li class="group-feature">
+            <div class="feature-icon">
+              <svg class="feature-icon-item" width="70" height="70">
+                <use href="./images/sprite.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">Внимание к деталям</h3>
             <p class="feature-text">
               Идейные соображения, а также начало повседневной работы по
@@ -68,6 +78,11 @@
             </p>
           </li>
           <li class="group-feature">
+            <div class="feature-icon">
+              <svg class="feature-icon-item" width="70" height="70">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">Пунктуальность</h3>
             <p class="feature-text">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -75,6 +90,11 @@
             </p>
           </li>
           <li class="group-feature">
+            <div class="feature-icon">
+              <svg class="feature-icon-item" width="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">Планирование</h3>
             <p class="feature-text">
               Равным образом консультация с широким активом в значительной
@@ -82,6 +102,11 @@
             </p>
           </li>
           <li class="group-feature">
+            <div class="feature-icon">
+              <svg class="feature-icon-item" width="70" height="70">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="feature-title">Современные технологи</h3>
             <p class="feature-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -130,6 +155,38 @@
               />
               <h3 class="member-name">Игорь Демьяненко</h3>
               <p class="member-role">Product Designer</p>
+              <div class="social">
+                <ul class="list social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="cards">
               <img
@@ -139,6 +196,38 @@
               />
               <h3 class="member-name">Ольга Репина</h3>
               <p class="member-role">Frontend Developer</p>
+              <div class="social">
+                <ul class="list social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="cards">
               <img
@@ -148,6 +237,38 @@
               />
               <h3 class="member-name">Николай Тарасов</h3>
               <p class="member-role">Marketing</p>
+              <div class="social">
+                <ul class="list social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="cards">
               <img
@@ -157,6 +278,100 @@
               />
               <h3 class="member-name">Михаил Ермаков</h3>
               <p class="member-role">UI Designer</p>
+              <div class="social">
+                <ul class="list social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="44" height="44">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Постоянные клиенты-->
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Наши клиенты</h2>
+          <ul class="list clients">
+            <li class="clients-icon">
+              <div class="clients-link">
+                <a href="">
+                  <svg class="clients-svg" width="41" height="47">
+                    <use href="./images/sprite.svg#icon-group1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="clients-icon">
+              <div class="clients-link">
+                <a href="">
+                  <svg class="clients-svg" width="40" height="52">
+                    <use href="./images/sprite.svg#icon-group2"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="clients-icon">
+              <div class="clients-link">
+                <a href="">
+                  <svg class="clients-svg" width="43" height="41">
+                    <use href="./images/sprite.svg#icon-group3"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="clients-icon">
+              <div class="clients-link">
+                <a href="">
+                  <svg class="clients-svg" width="84" height="41">
+                    <use href="./images/sprite.svg#icon-group4"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="clients-icon">
+              <div class="clients-link">
+                <a href="">
+                  <svg class="clients-svg" width="63" height="45">
+                    <use href="./images/sprite.svg#icon-group5"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="clients-icon">
+              <div class="clients-link">
+                <a href="">
+                  <svg class="clients-svg" width="94" height="44">
+                    <use href="./images/sprite.svg#icon-group6"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
@@ -164,24 +379,59 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo logo-footer"
-          >Web<span class="span-footer">Studio</span></a
-        >
-        <address class="address">
-          <p class="addr">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="foot-li">
-              <a href="mailto:info@devstudio.com" class="footer-contact"
-                >info@devstudio.com</a
-              >
+        <div class="">
+          <a href="./index.html" class="logo logo-footer"
+            >Web<span class="span-footer">Studio</span></a
+          >
+          <address class="address">
+            <p class="addr">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list">
+              <li class="foot-li">
+                <a href="mailto:info@devstudio.com" class="footer-contact"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="foot-li">
+                <a href="tel:+380961111111" class="footer-contact"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-footer">
+          <h3 class="footer-social-title">Присоединяйтесь</h3>
+          <ul class="list social-list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-insta"></use>
+                </svg>
+              </a>
             </li>
-            <li class="foot-li">
-              <a href="tel:+380961111111" class="footer-contact"
-                >+38 096 111 11 11</a
-              >
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
